feat(my-facade-facade): integrate auth0
integrate auth0

GH-5
