# facades/tenant-mgmt-facade/src/types.ts
@@ -132,3 +132,65 @@ export interface IValue {
   name: string;
   value: number | string | boolean;
 }
+
+export interface OrganizationDetails {
+  data: {
+    id: string;
+    branding?: {
+      logo_url?: string;
+      colors?: {
+        page_background?: string;
+        primary?: string;
+      };
+    };
+    display_name?: string;
+    name?: string;
+  };
+}
+export interface IOrganization {
+  name: string;
+  display_name: string;
+  logo_url?: string;
+  primary_color?: string;
+  page_background?: string;
+  form_background?: string;
+  link_color?: string;
+}
+export interface IUser {
+  email: string;
+  name: string;
+  connection: string;
+  password: string;
+  verify_email: boolean;
+  username?: string;
+  phone_number?: string;
+}
+export interface IMember {
+  userId: string;
+}
+
+export interface Identity {
+  connection: string;
+  user_id: string;
+  provider: string;
+  isSocial: boolean;
+}
+
+export interface UserDetailsData {
+  created_at: string;
+  email: string;
+  email_verified: boolean;
+  identities: Identity[];
+  name: string;
+  nickname: string;
+  picture: string;
+  updated_at: string;
+  user_id: string;
+}
+
+export interface UserDetails {
+  data: UserDetailsData;
+  headers: Record<string, any>;
+  status: number;
+  statusText: string;
+}
