# services/tenant-mgmt-service/src/models/index.ts
@@ -1,0 +1,3 @@
+export * from './memberDto';
+export * from './organizationDto.model';
+export * from './userDto.model'
