# services/tenant-mgmt-service/src/openapi.json
@@ -1132,6 +1132,81 @@
         "operationId": "LeadController.find"
       }
     },
+    "/organizations/{id}/members": {
+      "post": {
+        "x-controller-name": "OrganizationController",
+        "x-operation-name": "addMember",
+        "tags": [
+          "OrganizationController"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Member addition success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/AddMemberDTO"
+                }
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "string"
+            },
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/AddMemberToOrganization"
+              }
+            }
+          },
+          "x-parameter-index": 1
+        },
+        "operationId": "OrganizationController.addMember"
+      }
+    },
+    "/organizations": {
+      "post": {
+        "x-controller-name": "OrganizationController",
+        "x-operation-name": "createOrganization",
+        "tags": [
+          "OrganizationController"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Organization creation ",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/OrganizationDTO"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateOrganization"
+              }
+            }
+          }
+        },
+        "operationId": "OrganizationController.createOrganization"
+      }
+    },
     "/ping": {
       "get": {
         "x-controller-name": "PingController",
@@ -1530,6 +1605,38 @@
           }
         ],
         "operationId": "TenantController.find"
+      }
+    },
+    "/users": {
+      "post": {
+        "x-controller-name": "OrganizationController",
+        "x-operation-name": "createUser",
+        "tags": [
+          "OrganizationController"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "User creation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/UserDTO"
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateUser"
+              }
+            }
+          }
+        },
+        "operationId": "OrganizationController.createUser"
       }
     },
     "/": {
@@ -3200,6 +3307,206 @@
             "description": "id of the address of the tenant"
           }
         },
+        "additionalProperties": false
+      },
+      "OrganizationDTO": {
+        "title": "OrganizationDTO",
+        "type": "object",
+        "description": "DTO for creating an organization",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Organization name"
+          },
+          "display_name": {
+            "type": "string",
+            "description": "Display name of the organization"
+          },
+          "logo_url": {
+            "type": "string",
+            "description": "URL of the organization logo"
+          },
+          "primary_color": {
+            "type": "string",
+            "description": "Primary color for the organization"
+          },
+          "page_background": {
+            "type": "string",
+            "description": "Background color for the page"
+          },
+          "form_background": {
+            "type": "string",
+            "description": "Background color for forms"
+          },
+          "link_color": {
+            "type": "string",
+            "description": "Link color for the organization"
+          }
+        },
+        "required": [
+          "name",
+          "display_name",
+          "logo_url",
+          "primary_color"
+        ],
+        "additionalProperties": false
+      },
+      "CreateOrganization": {
+        "title": "CreateOrganization",
+        "type": "object",
+        "description": "DTO for creating an organization (tsType: OrganizationDTO, schemaOptions: { title: 'CreateOrganization' })",
+        "properties": {
+          "name": {
+            "type": "string",
+            "description": "Organization name"
+          },
+          "display_name": {
+            "type": "string",
+            "description": "Display name of the organization"
+          },
+          "logo_url": {
+            "type": "string",
+            "description": "URL of the organization logo"
+          },
+          "primary_color": {
+            "type": "string",
+            "description": "Primary color for the organization"
+          },
+          "page_background": {
+            "type": "string",
+            "description": "Background color for the page"
+          },
+          "form_background": {
+            "type": "string",
+            "description": "Background color for forms"
+          },
+          "link_color": {
+            "type": "string",
+            "description": "Link color for the organization"
+          }
+        },
+        "required": [
+          "name",
+          "display_name",
+          "logo_url",
+          "primary_color"
+        ],
+        "additionalProperties": false
+      },
+      "UserDTO": {
+        "title": "UserDTO",
+        "type": "object",
+        "description": "DTO for creating a user",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "User email address"
+          },
+          "name": {
+            "type": "string",
+            "description": "Full name of the user"
+          },
+          "connection": {
+            "type": "string",
+            "description": "Connection type (e.g., database, social)"
+          },
+          "password": {
+            "type": "string",
+            "description": "User password"
+          },
+          "verify_email": {
+            "type": "boolean",
+            "description": "Whether to verify the user's email"
+          },
+          "username": {
+            "type": "string",
+            "description": "Optional username"
+          },
+          "phone_number": {
+            "type": "string",
+            "description": "Optional phone number"
+          }
+        },
+        "required": [
+          "email",
+          "name",
+          "connection",
+          "password",
+          "verify_email"
+        ],
+        "additionalProperties": false
+      },
+      "CreateUser": {
+        "title": "CreateUser",
+        "type": "object",
+        "description": "DTO for creating a user (tsType: UserDTO, schemaOptions: { title: 'CreateUser' })",
+        "properties": {
+          "email": {
+            "type": "string",
+            "description": "User email address"
+          },
+          "name": {
+            "type": "string",
+            "description": "Full name of the user"
+          },
+          "connection": {
+            "type": "string",
+            "description": "Connection type (e.g., database, social)"
+          },
+          "password": {
+            "type": "string",
+            "description": "User password"
+          },
+          "verify_email": {
+            "type": "boolean",
+            "description": "Whether to verify the user's email"
+          },
+          "username": {
+            "type": "string",
+            "description": "Optional username"
+          },
+          "phone_number": {
+            "type": "string",
+            "description": "Optional phone number"
+          }
+        },
+        "required": [
+          "email",
+          "name",
+          "connection",
+          "password",
+          "verify_email"
+        ],
+        "additionalProperties": false
+      },
+      "AddMemberDTO": {
+        "title": "AddMemberDTO",
+        "type": "object",
+        "description": "DTO for adding a member to an organization",
+        "properties": {
+          "userId": {
+            "type": "string",
+            "description": "User ID to be added to the organization"
+          }
+        },
+        "required": [
+          "userId"
+        ],
+        "additionalProperties": false
+      },
+      "AddMemberToOrganization": {
+        "title": "AddMemberToOrganization",
+        "type": "object",
+        "description": "DTO for adding a member to an organization (tsType: AddMemberDTO, schemaOptions: { title: 'AddMemberToOrganization' })",
+        "properties": {
+          "userId": {
+            "type": "string",
+            "description": "User ID to be added to the organization"
+          }
+        },
+        "required": [
+          "userId"
+        ],
         "additionalProperties": false
       },
       "loopback.Count": {
